styles/global-blocks.css
/*
 * Copyright 2025 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
*/

/*
* Global Blocks *

  These block styles are shared between multiple block variants.
  Global blocks allow for consistency in styling between blocks and pages.

  To ensure inheritance within this file, global blocks should be named
  with proper BEM syntax and scoped within the block-level class name.

  Where necessary, `:root` selectors are located near their related blocks.
*/

.author-aside {
  margin-block-start: 2rem;
  border-top: 1px solid var(--spectrum-gray-400);
}

.author-bio {
  margin-block-start: 2rem;
  margin-block-end: 0;

  & .author-meta {
    display: flex;
    gap: 1rem;
    margin-block-end: 1rem;

    & .author-meta__image img {
      width: 4rem;
      height: 4rem;
      border-radius: 100%;
    }

    & .author-meta__info {
      align-self: center;
      display: flex;
      flex-direction: column;
      gap: 0.25rem;

      & > .author-meta__name {
        margin-block: 0;
        line-height: 1.25;
        font-size: var(--spectrum-font-size-300);
        font-weight: var(--spectrum-bold-font-weight);

        @media (min-width: 80rem) {
          font-weight: var(--spectrum-extra-bold-font-weight);
        }

        @media (min-width: 105rem) {
          font-size: var(--spectrum-font-size-400);
        }
      }

      & .author-meta__title {
        font-size: var(--spectrum-font-size-100);
        font-weight: var(--spectrum-medium-font-weight);
        color: var(--spectrum-gray-600);
      }
    }
  }

  .author-description {
    & p {
      @media (min-width: 80rem) {
        font-size: var(--spectrum-font-size-300);
      }
      @media (min-width: 105rem) {
        font-size: var(--spectrum-font-size-400);
      }
    }

    & p:first-of-type {
      margin-block-start: 0;
    }

    & p:last-of-type {
      margin-block-end: 0;
    }
  }
}

.button-group {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  margin-block-start: 0;
  margin-block-end: var(--spacing-global-block-end-small-screen);

  @media (min-width: 22.5rem) {
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
  }

  @media (min-width: 48rem) {
    gap: 1.5rem;
    margin-block-end: var(--spacing-global-block-end-medium-screen);
  }

  @media (min-width: 80rem) {
    margin-block-end: var(--spacing-global-block-end-large-screen);
  }
}

.horizontal-rule {
  height: 0;
  border: none;
  border-block-start: 1px solid var(--spectrum-gray-400);
  margin-block: 4rem;

  @media (min-width: 80rem) {
    margin-block: 5rem;
  }

  @media (min-width: 105rem) {
    margin-block: 6.5rem;
  }
}

.horizontal-rule--full {
  width: 100vw;
  margin-inline: calc(-1 * var(--page-gutters));

  @media (min-width: 105.5rem) {
    margin-inline: calc(-0.5 * calc(100vw - var(--page-max-width)));
  }
}

.listing-cta {
  background: var(--color-background-highlighted-element);
  border-radius: 1.5rem;
  padding: 1.5rem 1.25rem 2rem;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  box-shadow: var(--drop-shadow-emphasized);
  margin-block-start: 2.0rem;

  /* Fixed at the bottom of the page, only if the screen is not too small (i.e. not mobile in landscape). */
  @media (min-height: 40rem) {
    position: fixed;
    left: 0;
    bottom: 0;
    right: 0;
    border-radius: 1.5rem 1.5rem 0 0;
    margin-block-start: 0;
  }

  @media (min-width: 36rem) {
    padding: 1.5rem 2rem 2rem;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
  }

  @media (min-width: 67.5rem) {
    display: none;
  }

  & span {
    color: var(--color-text);

    @media (min-width: 36rem) {
      font-size: var(--spectrum-font-size-700);
    }
  }

  .button {
    @media (min-width: 36rem) {
      width: auto;
    }
  }
}

/* Job listing page */
.listing-container {
  @media (min-width: 67.5rem) {
    display: grid;
    grid-template-columns: 70ch 1fr 3fr;
    grid-template-rows: auto 1fr;
    grid-template-areas:
      "title title title"
      "content . details";
  }

  & > h1 {
    margin-block-end: 1rem;

    @media (min-width: 36rem) {
      margin-block-end: 2.5rem;
    }

    @media (min-width: 67.5rem) {
      margin-block-end: var(--spacing-global-block-end-medium-screen);
      grid-area: title;
    }

    @media (min-width: 105rem) {
      margin-block-end: 8.75rem;
    }
  }

  > .listing-details {
    @media (min-width: 67.5rem) {
      grid-area: details;
    }
  }

  > .listing-content {
    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      margin-block-start: var(--spacing-heading-block-start-small-screen);

      @media (min-width: 22.5rem) {
        margin-block-start: var(--spacing-heading-block-start-medium-screen);
      }

      @media (min-width: 48rem) {
        margin-block-start: var(--spacing-heading-block-start-large-screen);
      }

      @media (min-width: 67.5rem) {
        margin-block-start: var(--spacing-heading-block-start-xl-screen);
      }
    }

    & > h2:first-of-type {
      margin-block-start: 0;
    }

    @media (min-width: 67.5rem) {
      grid-area: content;
    }
  }
}
/* ... */

